# aidriven

./: .editorconfig  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Makefile  README.md  pyproject.toml
.claude/: SKILLS.md  settings.json
.claude/commands/: python-library-bootstrap.md  skill-creator.md  speckit.specify.md
.claude/skills/github-actions-workflow-setup/references/: action-catalog.md  stack-recipes.md  workflow-patterns.md
.claude/skills/python-project-setup/references/: tools-catalog.md
.copilot/skills/github-actions-workflow-setup/: SKILL.md
.copilot/skills/github-actions-workflow-setup/references/: action-catalog.md  stack-recipes.md
.github/: PULL_REQUEST_TEMPLATE.md  codecov.yml  copilot-instructions.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  publish.yml  release.yml
.specify/integrations/: claude.manifest.json  copilot.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/scripts/bash/: common.sh  create-new-feature.sh
docs/: DEVELOPMENT.md  RELEASE.md
specs/001-ide-discovery/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-ide-discovery/checklists/: requirements.md
specs/001-ide-discovery/contracts/: library-api.md
specs/002-cli-artifact-install/: data-model.md  plan.md  quickstart.md  reference-analysis.md  research.md  spec.md  tasks.md
specs/002-cli-artifact-install/checklists/: requirements.md
specs/002-cli-artifact-install/contracts/: cli.md  lockfile.schema.json  manifest.schema.json
src/aidev/: __init__.py  __main__.py  app.py  cli.py  constants.py
src/aidev/domain/: enums.py  models.py
src/aidev/infra/: filesystem.py  resource_loader.py  serializers.py
src/aidev/presentation/: console.py  prompts.py  renderers.py
src/aidev/resources/rules/clean-arch-principles/: RULE.md
src/aidev/resources/rules/terraform-infra-structure/: RULE.md
src/aidev/resources/skills/gh-actions-configuration/: SKILL.md
src/aidev/resources/skills/pytest-unit-testing/: SKILL.md
src/aidev/resources/skills/python-cli-development/: SKILL.md
src/aidev/resources/skills/python-cli-prettify/: SKILL.md
src/aidev/resources/skills/python-package-development/: SKILL.md
src/aidev/resources/skills/terraform-infra-development/: SKILL.md
src/aidev/resources/specs/spec-kit/: constitution_backend.md  constitution_observability.md  constitution_tests.md
src/aidev/services/: catalog_service.py  inspect_service.py  install_service.py  lockfile_service.py  project_service.py  remove_service.py  update_service.py
src/aidriven/: __init__.py
src/aidriven/cli/: __init__.py  _install_cmd.py  _main.py
src/aidriven/discovery/: __init__.py  _models.py  _orchestrator.py  _platform.py  _providers.py
src/aidriven/discovery/providers/: __init__.py  _cursor.py  _kiro.py  _vscode.py
src/aidriven/install/: __init__.py  _archive.py  _github.py  _hashing.py  _http.py  _installer.py  _lockfile.py  _manifest.py  _models.py  _paths.py  _planner.py  _service.py  _targets.py
tests/cli/: test_cli_inspect.py  test_cli_install.py  test_cli_list.py
tests/cli/install/: test_cli_exit_codes.py  test_cli_output.py  test_multi_target_output.py
tests/integration/discovery/: test_discovery.py
tests/integration/install/: test_autodetect.py  test_force_refetch.py  test_multi_target.py  test_single_target.py  test_user_scope.py
tests/unit/: test_catalog_service.py  test_install_service.py  test_lockfile_service.py  test_project_service.py
tests/unit/discovery/: test_models.py  test_orchestrator.py  test_platform.py  test_providers.py
tests/unit/discovery/providers/: test_cursor.py  test_kiro.py  test_vscode.py
tests/unit/install/: test_archive.py  test_autodetect.py  test_hashing.py  test_http.py  test_lockfile.py  test_manifest.py  test_paths.py  test_planner.py  test_validation.py
