[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aidev"
version = "0.1.0"
description = "AI development resources manager"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-mock",
    "ruff",
    "mypy",
]

[project.scripts]
aidev = "aidev.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/aidev"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.mypy]
python_version = "3.11"
strict = false

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
