[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aidriven"
version = "0.1.0"
description = "AI development resources manager — install and manage AI dev assets (skills, rules, specs) into your projects"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "Thiago Panini", email = "panini.development@gmail.com" },
]
keywords = ["ai", "cli", "developer-tools", "skills", "rules", "specs", "resources"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
    "Typing :: Typed",
]
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12",
    "rich>=13.0",
]

# NOTE: Console script entry point is intentionally omitted until the CLI
# implementation is in place. When ready, restore:
#
#   [project.scripts]
#   aidriven = "aidriven.cli:app"

[project.urls]
Homepage = "https://github.com/ThiagoPanini/aidriven"
Repository = "https://github.com/ThiagoPanini/aidriven"
Issues = "https://github.com/ThiagoPanini/aidriven/issues"
Changelog = "https://github.com/ThiagoPanini/aidriven/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["src/aidriven"]

# ---------------------------------------------------------------------------
# Ruff — linting and formatting (replaces flake8, black, isort)
# ---------------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "I",    # isort
    "W",    # pycodestyle warnings
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "N",    # pep8-naming
    "SIM",  # flake8-simplify
    "TCH",  # flake8-type-checking (move type-only imports to TYPE_CHECKING)
    "PT",   # flake8-pytest-style
    "RUF",  # ruff-specific rules
]
ignore = [
    "E501",  # line too long — handled by the formatter
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "N",    # naming conventions are relaxed in tests
    "PT",   # pytest style not enforced in all test utilities
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# ---------------------------------------------------------------------------
# mypy — static type checking (strict mode)
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.11"
strict = true

# Third-party libraries without complete type stubs
[[tool.mypy.overrides]]
module = [
    "typer.*",
    "rich.*",
]
ignore_missing_imports = true

# ---------------------------------------------------------------------------
# pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "--tb=short -q"

# ---------------------------------------------------------------------------
# coverage
# ---------------------------------------------------------------------------
[tool.coverage.run]
source = ["src/aidriven"]
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = false
# Set fail_under to a real threshold once tests are established (e.g. 80)
fail_under = 0

# ---------------------------------------------------------------------------
# Dependencies
# ---------------------------------------------------------------------------
[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-mock",
    "ruff",
    "mypy>=1.10",
    "pre-commit>=4.5.1",
]
