[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "aidriven"
description = "A python CLI tool that helps developers to get and install useful AI resources"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Thiago Panini", email = "panini.development@gmail.com" }]
requires-python = ">= 3.11"
dynamic = ["version"]
dependencies = []

[project.urls]
Homepage = "https://github.com/ThiagoPanini/aidriven"
Repository = "https://github.com/ThiagoPanini/aidriven"
Issues = "https://github.com/ThiagoPanini/aidriven/issues"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.wheel]
packages = ["src/aidriven"]

[dependency-groups]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "mypy>=1.0",
  "ruff>=0.9.0",
  "mkdocs-material>=9.0",
  "pre-commit>=3.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"
exclude = ["*/skills/skill-creator"]

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "N", "SIM", "TCH", "PT", "RUF"]
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["aidriven"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
exclude = ["build/", "dist/"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short --cov=src --cov-report=term-missing"

[tool.coverage.run]
source = ["src"]
branch = true
omit = ["*/tests/*", "*/__init__.py"]

[tool.coverage.report]
show_missing = true
skip_covered = false
fail_under = 0
